# liganacionalgt

./: .gitignore  .rnconfig.android.json  .xcode.env  App.js  CertificateSigningRequest.certSigningRequest  apns-dev-cer.p12  apns-dis-cer.p12  app.json  babel.config.js  firebase.json  gradle.properties  index.js  metro.config.js  package-lock.json  package.json  react-native.config.js
ads/: AdFooter.js  AdInterstitial.js  AdManager.js  AppOpenAdManager.js  InlineAd.js  InlineNativeAd.js
android/: .project  build.gradle  gradle.properties  projects.txt  settings.gradle
android/app/: BUCK  CMakeLists.txt  build.gradle  chapin-key.keystore  google-services.json  helios-release-key.keystore
android/app/src/debug/java/com/chapin/: ReactNativeFlipper.java
android/app/src/followers/: google-services.json
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: appmodules.cpp
android/app/src/main/java/com/chapinpro/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: strings.xml  styles.xml
android/app/src/main/res/xml/: gma_ad_services_config.xml  network_security_config.xml
build-sim/: info.plist
components/: ActiveNotifications.js  Avatar.js  BellToggle.js  Calendar.js  CalendarConcacaf.js  Card.js  DetallesBlock.js  Feeds.js  FooterTabs.js  Header.js  Headerweb.js  Home.js  LineupsTeamBlock.js  LogoImg.js  Match.js  MatchCard.js  More.js  New.js  NotificationPrompt.js  PlayerScreen.js  Players.js  Positions.js  PositionsBlock.js  Schedule.js  Scorers.js  Settings.js  Splash.js  StadiumImg.js  StatsBox.js  TabSafeSpacer.js  TeamMatches.js  TeamScreen.js  TeamSearchModal.js  TeamSquad.js  TeamStats.js  TeamSummary.js  Teams.js  Torneos.js  TourneyBadge.js  Webview.js  (+1 more)
ios/: FCSheetShims.h  FCSheetShims.m  File.swift  GoogleService-Info.plist  Podfile  RCTView+SheetsShim.m  Untitled.h
patches/: react-native-gesture-handler+2.29.0.patch  react-native-google-mobile-ads+15.4.0.patch  (+1 more)
(+52 files in other folders)
